--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "bootstrap": "^5.3.3",
+    "react-bootstrap": "^2.10.6"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
